# LIA-more-than-an-agent

./: .gitignore  README.md
lia-client/: package-lock.json  package.json
lia-client/src/: App.css  App.tsx  index.css
lia-client/src-tauri/: Cargo.toml  tauri.conf.json
lia-client/src-tauri/src/: audio.rs  cloud_client.rs  context.rs  hasher.rs  main.rs  orchestrator.rs  playback.rs  request.rs  sentinel.rs  vision.rs  wakeword.rs
lia-client/src/components/: ContextBar.tsx  StatusOrb.tsx  StreamingText.tsx
lia-cloud/: cache.py  config.py  inference.py  main.py  requirements.txt  stt.py  tts.py
lia-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
lia-vscode/src/: extension.ts
