[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
xcap = "0.3.3"
cpal = "0.15.3"
regex = "1"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
hound = "3.5"
rodio = "0.19"
ctrlc = "3.4"
image = "0.25"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
